<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/Options_Theme"
            android:textColor="@color/colorAccent" />

        <RadioGroup
            android:id="@+id/ThemeGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/Radio_ThemeDefault"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onThemeChange"
                android:tag="Default"
                android:text="@string/Options_DefaultTheme" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/MediumGrey" />

            <RadioButton
                android:id="@+id/Radio_ThemeLight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onThemeChange"
                android:tag="Light"
                android:text="@string/Options_LightTheme" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/MediumGrey" />

            <RadioButton
                android:id="@+id/Radio_ThemeDark"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onThemeChange"
                android:text="@string/Options_DarkTheme"
                android:tag="Dark"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/MediumGrey" />

            <RadioButton
                android:id="@+id/Radio_Theme_Black"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onThemeChange"
                android:text="@string/Options_BlackTheme"
                android:tag="Black"/>
        </RadioGroup>

    </LinearLayout>
</LinearLayout>
